# engine.io

./: CMakeLists.txt  Makefile  README.md
core/inc/: operating-context.h  platform-config.h  platform-linux.h  platform-universal.h  platform-win.h  platform.h  stream.io-uv.h  systembus.h
core/src/: engine.io.cpp  operating-context.cpp  platform-config.cpp  platform-linux.cpp  platform-win.cpp  platform.cpp  stream.io-uv.cpp  systembus.cpp
tools/performance-benchmarks/message-cat/: message-cat.sln
tools/performance-benchmarks/message-cat/core/: message-cat.vcxproj  message-cat.vcxproj.filters  stdafx.cpp  stdafx.h
tools/performance-benchmarks/message-cat/core/inc/app/: app-config.h  payload-generator.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/: ioprocessor.h  v2error.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/ioadapters/: defs-libuv.h  fnlambdas-libuv.h  monitor-libuv.h  timestamp.h
tools/performance-benchmarks/message-cat/core/inc/engine.io/transporters/: tcp.h
tools/performance-benchmarks/message-cat/core/src/app/: app-config.cpp  message-cat.cpp
tools/performance-benchmarks/message-cat/core/src/engine.io/ioadapters/: monitor-libuv.cpp
tools/performance-benchmarks/message-cat/core/src/engine.io/transporters/: tcp.cpp
tools/performance-benchmarks/message-cat/core/tests/: app-config_ut.cpp
